[gd_scene load_steps=20 format=3 uid="uid://brfkqg5dbsuq"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_8spcv"]
[ext_resource type="Texture2D" uid="uid://c62x7qj76t2v5" path="res://assets/icons/water.aseprite" id="4_22p4l"]
[ext_resource type="PackedScene" uid="uid://ccn33bgi1kcco" path="res://assets/models/world river.glb" id="4_lrj47"]
[ext_resource type="Theme" uid="uid://bvuglxq615n6e" path="res://text.tres" id="5_2826s"]
[ext_resource type="Texture2D" uid="uid://bequx18jhwbq8" path="res://assets/icons/policy.aseprite" id="5_h5pu3"]
[ext_resource type="Texture2D" uid="uid://cnyfyx6sohe1a" path="res://assets/icons/event.aseprite" id="6_df6am"]
[ext_resource type="Theme" uid="uid://dtj8wbgshg2m3" path="res://master_theme.tres" id="6_jiuxe"]
[ext_resource type="Texture2D" uid="uid://capobw7vuerj5" path="res://assets/icons/ampear.aseprite" id="6_p7lf3"]
[ext_resource type="Texture2D" uid="uid://duakl2jtj2xoc" path="res://assets/icons/roboticon.aseprite" id="6_uyteo"]
[ext_resource type="Texture2D" uid="uid://kdaprjxsevtm" path="res://assets/icons/event2.aseprite" id="7_qbejk"]
[ext_resource type="Texture2D" uid="uid://bk4tp60qfkfxn" path="res://assets/icons/event3.aseprite" id="8_4nqm6"]
[ext_resource type="Texture2D" uid="uid://cyoai8edosgmw" path="res://assets/icons/metal.aseprite" id="8_8425l"]
[ext_resource type="Texture2D" uid="uid://dnf8qtdtaodk6" path="res://assets/icons/clocksummer.png" id="9_2upii"]
[ext_resource type="Texture2D" uid="uid://c3bipqa1qhhba" path="res://assets/icons/mountain.aseprite" id="9_85j7y"]
[ext_resource type="AudioStream" uid="uid://brlojqwk53wv6" path="res://assets/sounds/clock-tick.mp3" id="10_cghmq"]
[ext_resource type="AudioStream" uid="uid://cdvrfx4fc35oe" path="res://assets/sounds/darkbell.mp3" id="11_iqeyi"]
[ext_resource type="Texture2D" uid="uid://cuak8ouf4cyde" path="res://assets/icons/nextturn.png" id="12_nksn0"]
[ext_resource type="PackedScene" uid="uid://b3bdwxvpmu30l" path="res://assets/sprites/robot.aseprite" id="16_athk3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggkm3"]
bg_color = Color(0, 0.631373, 0.976471, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_8spcv")

[node name="world river" parent="." instance=ExtResource("4_lrj47")]

[node name="robot" parent="." instance=ExtResource("16_athk3")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.487064, 1.168, 0.763777)
autoplay = "default"

[node name="robot1" parent="." instance=ExtResource("16_athk3")]
transform = Transform3D(0.05, 0, 0, 0, 0.0496951, 0.0055136, 0, -0.0055136, 0.0496951, 0.572062, 1.172, 0.886256)
autoplay = "default"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.938095, 0.346379, 0, -0.346379, 0.938095, 0.00268662, 1.99665, 1.6129)
fov = 62.7476

[node name="OmniLight3D" type="OmniLight3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0472816, 1.35975, -1.13444)
light_color = Color(0.976471, 0.992157, 0.972549, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("6_jiuxe")

[node name="ChoicesContainer" type="PanelContainer" parent="CanvasLayer/TopBar"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TopBar/ChoicesContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VFlowContainer" type="VFlowContainer" parent="CanvasLayer/TopBar/ChoicesContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15

[node name="PolicyIcon" type="TextureRect" parent="CanvasLayer/TopBar/ChoicesContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
texture = ExtResource("5_h5pu3")

[node name="EventIcon1" type="TextureRect" parent="CanvasLayer/TopBar/ChoicesContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
texture = ExtResource("6_df6am")

[node name="EventIcon2" type="TextureRect" parent="CanvasLayer/TopBar/ChoicesContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
texture = ExtResource("7_qbejk")

[node name="EventIcon3" type="TextureRect" parent="CanvasLayer/TopBar/ChoicesContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
texture = ExtResource("8_4nqm6")

[node name="DateContainer" type="PanelContainer" parent="CanvasLayer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("6_jiuxe")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TopBar/DateContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CurrentTime" type="RichTextLabel" parent="CanvasLayer/TopBar/DateContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("6_jiuxe")
fit_content = true

[node name="ClockContainer" type="VSplitContainer" parent="CanvasLayer/TopBar"]
layout_mode = 2

[node name="Clock" type="TextureRect" parent="CanvasLayer/TopBar/ClockContainer"]
layout_mode = 2
texture = ExtResource("9_2upii")

[node name="ClockTick" type="AudioStreamPlayer" parent="CanvasLayer/TopBar/ClockContainer/Clock"]
stream = ExtResource("10_cghmq")

[node name="ClockBell" type="AudioStreamPlayer2D" parent="CanvasLayer/TopBar/ClockContainer/Clock"]
position = Vector2(131, -59)
stream = ExtResource("11_iqeyi")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TopBar/ClockContainer"]
layout_mode = 2
texture = ExtResource("12_nksn0")

[node name="EndTurn" type="Button" parent="CanvasLayer/TopBar/ClockContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/TopBar/ClockContainer/TextureRect/EndTurn"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 65.0
theme = ExtResource("6_jiuxe")
theme_override_font_sizes/font_size = 44
text = "End Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinProgress" type="PanelContainer" parent="CanvasLayer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TopBar/WinProgress"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/TopBar/WinProgress/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("6_jiuxe")
theme_override_styles/fill = SubResource("StyleBoxFlat_ggkm3")
step = 0.1
rounded = true

[node name="ResourceTracker" type="VFlowContainer" parent="CanvasLayer/TopBar"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("6_jiuxe")

[node name="ResourceContainer" type="PanelContainer" parent="CanvasLayer/TopBar/ResourceTracker"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VFlowContainer" type="VFlowContainer" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 0

[node name="BotsUIGrid" type="GridContainer" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="BotsIcon" type="TextureRect" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/BotsUIGrid"]
layout_mode = 2
texture = ExtResource("6_uyteo")
stretch_mode = 3

[node name="BotsLabel" type="Label" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/BotsUIGrid"]
layout_mode = 2
theme = ExtResource("5_2826s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="WaterUIGrid" type="GridContainer" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="WaterIcon" type="TextureRect" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/WaterUIGrid"]
layout_mode = 2
texture = ExtResource("4_22p4l")
stretch_mode = 3

[node name="WaterLabel" type="Label" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/WaterUIGrid"]
layout_mode = 2
theme = ExtResource("5_2826s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MountainUIGrid" type="GridContainer" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="MountainIcon" type="TextureRect" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/MountainUIGrid"]
layout_mode = 2
texture = ExtResource("9_85j7y")

[node name="MountainLabel" type="Label" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/MountainUIGrid"]
layout_mode = 2
theme = ExtResource("5_2826s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AmpearUIGrid" type="GridContainer" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="AmpearIcon" type="TextureRect" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/AmpearUIGrid"]
layout_mode = 2
texture = ExtResource("6_p7lf3")

[node name="AmpearLabel" type="Label" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/AmpearUIGrid"]
layout_mode = 2
theme = ExtResource("5_2826s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MetalUIGrid" type="GridContainer" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="MetalIcon" type="TextureRect" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/MetalUIGrid"]
layout_mode = 2
texture = ExtResource("8_8425l")

[node name="MetalLabel" type="Label" parent="CanvasLayer/TopBar/ResourceTracker/ResourceContainer/MarginContainer/VFlowContainer/MetalUIGrid"]
layout_mode = 2
theme = ExtResource("5_2826s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CanvasLayer/TopBar/ClockContainer/TextureRect/EndTurn" to="." method="_on_end_turn_pressed"]
